# swing_trading_scanner

./: main.py  pyproject.toml  stocks.json
