[tool.poetry]
name = "swing-trading-scanner"
version = "0.1.0"
description = ""
authors = ["Krunal Dodiya <kunal.dodiya1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
pandas = "^2.2.1"
pandas-ta = "^0.3.14b0"
yfinance = "^0.2.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
